[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "domutils"
dynamic = ["version"]
description = "dominik's tools for custom color mappings and geographical projections"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
authors = [
    { name = "Dominik Jacques", email = "dominik.jacques@gmail.com" }
]
requires-python = ">=3.7"

dependencies = [
    "numpy>=1.20",
    "scipy",
    "attrdict",
    "cartopy", 
    "matplotlib",
    "dask[complete]", 
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-timeout",
    "pytest-cov", 
    "domcmc",
    "pysteps", 
    "h5py", 
    "pygrib", 
    "cairosvg", 
]

docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "sphinx-gallery",
    "sphinx-autodoc-typehints",
    "sphinx-argparse",
]

build = [
    "packaging",
    "twine"
]

[project.urls]
Homepage = "https://github.com/dja001/domutils"
Repository = "https://github.com/dja001/domutils.git"

[tool.setuptools.dynamic]
version = { file = "VERSION" }

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]

[tool.pytest.ini_options]
markers = [
  "rpnpy: tests that require the use of rpnpy activated by SSM"
]

testpaths = ["domutils"]


